--- a/SimbaVermessungsbüro/HTML/Bauvorhaben.html
+++ b/SimbaVermessungsbüro/HTML/Bauvorhaben.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="../CSS/theme.min.css">
   <link rel="stylesheet" href="../CSS/main.css">
   <style>
+      @media (max-width:767px) {
+    #logoleiste {
+      display: none;
+      }
+    }
+
     a {
       font-weight: bold;
       color: #294D5B;
@@ -71,12 +77,14 @@
       </ul>
     </div>
   </header>
+  <aside>
+    <img id="messgerät" src="../Medien/messgerät.png">
+    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+  </aside>
   <main>
-    <img id="logoleiste" src="../Medien/Logoleiste_lang.png"></img>
     <div class="container">
       <div class="row">
       <div class="col-sm-2">
-      <img id="messgerät" src="../Medien/messgerät.png">
     </div>
     <div id="content" class="col-sm-8">
     </br>
