--- a/SimbaVermessungsbüro/HTML/Home.html
+++ b/SimbaVermessungsbüro/HTML/Home.html
@@ -6,6 +6,13 @@
   <title>SimBa Vermessungsbüro</title>
   <link rel="stylesheet" href="../CSS/theme.min.css">
   <link rel="stylesheet" href="../CSS/main.css">
+  <style>
+    @media (max-width:991px) {
+    #logoleiste {
+      display: none;
+    }
+}
+  </style>
 </head>
 <body>
   <header>
@@ -63,14 +70,17 @@
       </ul>
     </div>
   </header>
+  <aside>
+    <img id="messgerät" src="../Medien/messgerät.png">
+    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+  </aside>
   <main>
-  <img style="overflow:hidden" id="logoleiste" src="../Medien/Logoleiste.png"></img>
   <div class="container">
     <div class="row">
-    <div class="col-sm-2">
-    <img id="messgerät" src="../Medien/messgerät.png">
-  </div>
-    <div id="content" class="col-sm-10">
+      <div class="col-md-2">
+
+      </div>
+    <div id="content" class="col-md-8">
     </br>
       <h3 class="text">Willkommen</h3></br>
       <h4 class="text">Das Ingenieur- und Vermessungsbüro Simon & Partner</h4></br>
