--- a/SimbaVermessungsbüro/HTML/Links.html
+++ b/SimbaVermessungsbüro/HTML/Links.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="../CSS/theme.min.css">
   <link rel="stylesheet" href="../CSS/main.css">
   <style>
+    @media (max-width:767px) {
+    #logoleiste {
+      display: none;
+    }
+}
     a {
       font-weight: bold;
       color: #294D5B;
@@ -72,14 +77,16 @@
       </ul>
     </div>
   </header>
+  <aside>
+    <img id="messgerät" src="../Medien/messgerät.png">
+    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+  </aside>
   <main>
-  <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
   <div class="container">
     <div class="row">
     <div class="col-sm-2">
-    <img id="messgerät" src="../Medien/messgerät.png">
   </div>
-    <div id="content" class="col-sm-10">
+    <div id="content" class="col-sm-8">
     </br>
       <h3 class="text">Links</h3></br>
       <h4 class="text">Links zu wichtigen und empfehlenswerten Websites</h4></br>
