--- a/SimbaVermessungsbüro/HTML/Auftraggeber.html
+++ b/SimbaVermessungsbüro/HTML/Auftraggeber.html
@@ -6,6 +6,13 @@
   <title>SimBa Vermessungsbüro</title>
   <link rel="stylesheet" href="../CSS/theme.min.css">
   <link rel="stylesheet" href="../CSS/main.css">
+  <style>
+    @media (max-width:767px) {
+    #logoleiste {
+      display: none;
+    }
+}
+  </style>
 </head>
 <body>
   <header>
@@ -63,14 +70,16 @@
       </ul>
     </div>
   </header>
+  <aside>
+    <img id="messgerät" src="../Medien/messgerät.png">
+    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+  </aside>
 <main>
-  <img id="logoleiste" src="../Medien/Logoleiste_5.png"></img>
   <div class="container">
     <div class="row">
     <div class="col-sm-2">
-    <img id="messgerät" src="../Medien/messgerät.png">
   </div>
-    <div id="content" class="col-sm-10">
+    <div id="content" class="col-sm-8">
     </br>
       <h3 class="text" >Auftraggeber</h3></br>
         <h4 class="text">
