--- a/SimbaVermessungsbüro/HTML/Stellenangebot.html
+++ b/SimbaVermessungsbüro/HTML/Stellenangebot.html
@@ -6,6 +6,13 @@
   <title>SimBa Vermessungsbüro</title>
   <link rel="stylesheet" href="../CSS/theme.min.css">
   <link rel="stylesheet" href="../CSS/main.css">
+  <style>
+    @media (max-width:767px) {
+    #logoleiste {
+      display: none;
+    }
+}
+  </style>
 </head>
 <body>
   <header>
@@ -64,14 +71,16 @@
       </ul>
     </div>
   </header>
-  <main>
+  <aside>
+    <img id="messgerät" src="../Medien/messgerät.png">
     <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+  </aside>
+  <main>
     <div class="container">
       <div class="row">
       <div class="col-sm-2">
-      <img id="messgerät" src="../Medien/messgerät.png">
     </div>
-    <div id="content" class="col-sm-10">
+    <div id="content" class="col-sm-8">
     </br>
       <h3 class="text">Stellenangebot</h3></br>
 
