update content (ohne Bauvorhaben)
update content (ohne Bauvorhaben)

--- a/SimbaVermessungsbüro/HTML/Angebot.html
+++ b/SimbaVermessungsbüro/HTML/Angebot.html
@@ -72,7 +72,7 @@
   </header>
   <aside>
     <img id="messgerät" src="../Medien/messgerät.png">
-    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+    <img id="logoleiste" src="../Medien/Logoleiste_5.png"></img>
   </aside>
   <main>
     <div class="container">
@@ -91,7 +91,7 @@
       </p>
       <p class="text" style="font-weight:bold;">Tätigkeitsbereiche:</p>
       <p class="text">
-          Absteckung, Aufmaß u. Abrechnung im Straßen- u. Tiefbau, Gleisbau, GaLaBau und im Brückenbau<br>
+          Absteckung, Aufmaß u. Abrechnung im Straßen- u. Tiefbau, Gleisbau, GaLaBau  ( nach GRIS-Berlin und „Yade-GBKat„ ) und im Brückenbau<br>
           Volumenermittlungen jeder Art (Dämme, Aufschüttungen, Räume, Gebäude, Erdmassen etc.)<br>
           Bauwerksüberwachungen, bzw. Kontrollvermessungen, Deformationsmessungen<br>
           Bestandspläne / Bestandsdokumentationen<br>
