--- a/SimbaVermessungsbüro/HTML/Auftraggeber.html
+++ b/SimbaVermessungsbüro/HTML/Auftraggeber.html
@@ -72,7 +72,7 @@
   </header>
   <aside>
     <img id="messgerät" src="../Medien/messgerät.png">
-    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+    <img id="logoleiste" src="../Medien/Logoleiste_lang.png"></img>
   </aside>
 <main>
   <div class="container">
@@ -83,44 +83,60 @@
     </br>
       <h3 class="text" >Auftraggeber</h3></br>
         <h4 class="text">
-          Zu unseren Auftrag  gebern gehören u.a. die
+          Zu unseren Auftrag  gebern gehören die
         </h4>
         <br>
         <p class="text">
-          Berliner Wasserbetriebe<br>
-          BFG-Berliner Flughafengesellschaft mbH<br>
-          B.E.S.T.-Bau GmbH & Co. KG<br>
-          Bleck & Söhne GmbH<br>
-          Blaese GmbH<br>
-          BRC-Bodenrecycling GmbH<br>
-          Max Bögl GmbH & Co. KG<br>
-          Dalhoff GmbH,<br>
-          Fritze & Co GmbH & Co. KG<br>
-          Fehmer GmbH<br>
-          Ingo Griesbach GmbH <br>
-          HTF Hoch-Tiefbau GmbH <br>
-          Kara GbR<br>
-          Kemna GbR & Co. KG <br>
-          Kummer Erd- und Tiefbau GmbH <br>
-          Otto Kittel GmbH & Co. <br>
-          Matthäi Bauunternehmen GmbH & Co. KG<br>
-          Oevermann GmbH & Co. KG<br>
-          PaGeFa GmbH<br>
-          Rausch Straßen- und Tiefbau GmbH<br>
-          Schrobsdorff - Bau AG<br>
-          Strabag GmbH<br>
-          Stradeck GmbH<br>
-          Gottlieb Tesch GmbH<br>
-          TRAPP INFRA Berlin GmbH<br>
-          VSTR Vogtländische Straßenn-, Tief- & Rohrleitungsbau GmbH<br>
-          Walter Bau AG (Heilit u. Woerner AG)<br>
-          Franz Wickel GmbH<br>
-          Karl Weiss GmbH<br>
+        die Berliner Tiefbauämter,</br>
+        die Berliner Natur- und Grünflächenämter,</br>
+        die Senatsverwaltung für Stadtentwicklung,</br>
+        die Berliner Wasserbetriebe,</br>
+        die BVG und</br>
+        viele Architektur - und Planungsbüros</br>
+        bei denen wir als anerkanntes Vermessungs- und Ingenieurbüro geführt sind.
+        </p>
+        <br>
+        <h4 class="text">
+          Außerdem deren ausführenden Firmen
+        </h4>
+        <p class="text">
+        ABF Straßenbau GmbH</br>
+    		Berliner Wasserbetriebe,</br>
+    		BFG-Berliner Flughafengesellschaft mbH,</br>
+    		B.E.S.T.-GaLaBau</br>
+    		Blaese Straßen- und Tiefbau GmbH</br>
+    		Max Bögl GmbH & Co.KG</br>
+    		M + O Berlin GmbH</br>
+    		Dalhoff GmbH,</br>
+    		EUROVIA Verkehrsbau Union GmbH</br>
+    		Ernst & Wenzel GmbH</br>
+    		Frisch + Faust Tiefbau GmbH</br>
+    		Fritze & Co. GmbH & CoKG</br>
+    		Gottlieb Tesch GmbH</br>
+    		Günnel Bau GmbH & CoKG</br>
+    		Ingo Griesbach Tief- und Straßenbau GmbH & CoKG</br>
+    		Hajek Straßen- und Tiefbau GmbH</br>
+    		KARA GbR</br>
+    		KEMNA Bau</br>
+    		M + O Berlin GmbH</br>
+    		MAN Diesel & Turbo SE</br>
+    		Matthäi Bauunternehmen GmbH & CoKG,</br>
+    		Meyer & John Berlin GmbH</br>
+     		Oevermann GmbH & Co.KG</br>
+    		Paulus Straßenbau GmbH</br>
+    		Paulus Zauber Straßenbau GmbH</br>
+    		Rausch Straßen- und Tiefbau GmbH</br>
+    		Rubert Straßen- und Tiefbau GmbH</br>
+    		STRABAG AG</br>
+    		Stradeck GmbH</br>
+    		Tigala Straßen- und Landschaftsbau GmbH</br>
+    		Franz Wickel GmbH</br>
+    		Karl Weiss GmbH</br>
+    		Carl Zauber Tiefbau GmbH</br>
         </p>
         <br>
         <p class="text">
           und viele mehr, mit denen wir teilweise durch Jahresverträge verbunden sind.
-          Ausserdem können wir auf eine gute Zusammenarbeit mit den Berliner Tiefbauämtern, der Senatsverwaltung für Stadtentwicklung, sowie den BWB und der BVG verweisen, bei denen wir als anerkanntes Vermessungs- und Ingenieurbüro geführt sind.
         </p>
         <br>
     </div>
