--- a/SimbaVermessungsbüro/HTML/Ausstattung.html
+++ b/SimbaVermessungsbüro/HTML/Ausstattung.html
@@ -79,7 +79,7 @@
   </header>
   <aside>
     <img id="messgerät" src="../Medien/messgerät.png">
-    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+    <img id="logoleiste" src="../Medien/Logoleiste_lang.png"></img>
   </aside>
   <main>
   <div class="container">
@@ -91,8 +91,8 @@
       <h3 class="text">Ausstattung</h3></br>
       <p class="text">
         Modernste geodätische Instrumente der höchsten Genauigkeit, computergestützte Datenauswertung,
-        sowie nicht zu Letzt unsere Mitarbeiter mit langjähriger Berufs- erfahrung im Vermessungswesen geben uns die Möglichkeit,
-        Vermessungs- konzepte mit hoher Effektivität zu erstellen und diese vermessungstechnisch sicher umzusetzen: </br></br>
+        sowie nicht zu Letzt unsere Mitarbeiter mit langjähriger Berufserfahrung im Vermessungswesen geben uns die Möglichkeit,
+        Vermessungskonzepte mit hoher Effektivität zu erstellen und diese vermessungstechnisch sicher umzusetzen: </br></br>
         4 komplett ausgestattete Verm.- Trupp's (PKW, Elektrooptische Totalstation, Nivellier, Rotationslaser, Distomat, Zwangszentrierung, Gasmessgerät etc.).</br>
         PC-Arbeitsplätze incl. Umgebung,Farb-/Laserdrucker</br>
         2 Vektorplotter (AO), Tischplotter, Farbplotter (A0)</br>
@@ -104,7 +104,7 @@
         a) Geodimeter 620 und b) Geodimeter 610</br>
         c) Topcon GTS-6A</br>
         d) Topcon GTS-6B</br>
-        e) Trimble 3602</br></br>
+        e) GPS GeoMax Zenith 25 Pro Rover</br></br>
         a+b) Herstellerangaben:</br>
         Entfernungsmessung mi = 5mm +3 ppm</br>
         Richtungsgenauigkeit mr= 0,5 mgon</br></br>
@@ -115,8 +115,8 @@
         Entfernungsmessung mi = 3mm +3 ppm</br>
         Richtungsgenauigkeit mr= 1,5 mgon</br></br>
         e) Herstellerangaben:</br>
-        Entfernungsmessung mi = 2mm +2 ppm</br>
-        Richtungsgenauigkeit rrir= 0,7 mgon</br></br>
+        Statisch Horizontal ml = 3,0- 5 mm + 0,1-0,5 ppm</br>
+        Statisch Vertikal mr = 3,5-10 mm + 0,4-0,5 ppm</br></br>
         <a href="" class="text" style="font-weight:bold;">Nivelliere:</a></br></br>
         a) DiNi 10 Elektronisches Digitalnivellier mit Strichcodelatte</br>
         b) Topcon AT-G3 Ingenieurnivellier mit Stahlbandlatte</br>
@@ -127,6 +127,8 @@
         Standardabweichungfür 1 km Doppelnivellement = 1,5 mm</br></br>
         c) Herstellerangabe:</br>
         Standardabweichung für 1 km Doppelnivellement = 2,0 mm</br></br>
+        e) Herstellerangabe:</br>
+        Standardabweichung für 1 km Doppelnivellement = 0,5-2,0 mm</br></br>
       </p>
     </div>
     <div class="col-sm-2">
