--- a/SimbaVermessungsbüro/HTML/Bauvorhaben.html
+++ b/SimbaVermessungsbüro/HTML/Bauvorhaben.html
@@ -79,7 +79,7 @@
   </header>
   <aside>
     <img id="messgerät" src="../Medien/messgerät.png">
-    <img id="logoleiste" src="../Medien/Logoleiste.png"></img>
+    <img id="logoleiste" src="../Medien/Logoleiste_lang.png"></img>
   </aside>
   <main>
     <div class="container">
