--- a/SimbaVermessungsbüro/HTML/Home.html
+++ b/SimbaVermessungsbüro/HTML/Home.html
@@ -85,10 +85,12 @@
       <h3 class="text">Willkommen</h3></br>
       <h4 class="text">Das Ingenieur- und Vermessungsbüro Simon & Partner</h4></br>
       <p class="text">
-        ... besteht seit 1986 als alt eingesessenes Vermessungsbüro und firmiert seit 1992 als Gesellschaft bürgerlichen Rechts unter dem Namen "Simon & Partner GbR".
+        ... besteht seit 1986 als Gesellschaft bürgerlichen Rechts und firmiert seit 1992 unter dem Namen "Simon & Partner GbR".
+        Das Wissen von über 30 Jahren praktischer Tätigkeit im staatlichen,
+        sowie im freien Vermessungswesen ist die Grundlage der Gesellschafter für die Gewährleistung von Effizienz und Flexibilität im Unternehmen.
         Als dynamisches und flexibles Unternehmen beschäftigt es ca. 10 Mitarbeiter mit speziellen und fachübergreifenden Kenntnissen.</br></br>
         Unsere Mitarbeiter verfügen über langjährige Erfahrung im Umgang mit Ingenieurprojekten jeder Größenordnung.
-        Diese Erfahrungen bedeuten für unsere Kunden Kompetenz, Effezienz ud Flexibilität.</br>
+        Diese Erfahrungen bedeuten für unsere Kunden Kompetenz, Effezienz ud Flexibilität.
         Unser Ingenieurbüro hat sich seit seiner Gründung 1986 zu einem ganzheitlichen Anbieter vermessungstechnischer Leistungen auf hohem Niveau entwickelt.</br></br>
         Im Zentrum unserer Arbeit steht der Kunde. Wir streben mit unseren Kunden und Geschäftspartnern dauerhafte Beziehungen auf der Basis gegenseitigen Vertrauens an.
         Unabhängig hiervon sind wir auch bei kleineren Vermessungsleistungen jeglicher Art für Sie da.</br>
