--- a/SimbaVermessungsbüro/HTML/Preisliste.html
+++ b/SimbaVermessungsbüro/HTML/Preisliste.html
@@ -95,23 +95,19 @@
         <p>
           <table class="text" style="background-color:#FFF5F5">
             <tr>
-              <td>An- und Abfahrtspauschale (Fehlfahrt):</td>
-              <td>&nbsp25,- €/STD(netto)</td>
+              <td>Verm.-Trupp (3 Mann) Absteckung:</td>
+              <td>&nbsp90,-- €/STD(netto)</td>
             </tr>
             <tr>
-              <td>Verm.-Trupp (2 Mann):</td>
-              <td>&nbsp75,- €/STD(netto)</td>
-            </tr>
-            <tr>
-              <td>Verm.-Trupp (3 Mann):</td>
-              <td>&nbsp90,- €/STD(netto)</td>
+              <td>Verm.-Trupp (2 Mann) Aufmaß/Niv:</td>
+              <td>&nbsp80,-- €/STD(netto)</td>
             </tr>
             <tr>
               <td>Dipl.-Ing. (Büro):</td>
-              <td>&nbsp45,- €/STD(netto)</td>
+              <td>&nbsp50,- €/STD(netto)</td>
             </tr> <tr>
               <td>Techniker ( CAD-Bearbeiter):</td>
-              <td>&nbsp35,- €/STD(netto)</td>
+              <td>&nbsp40,- €/STD(netto)</td>
             </tr>
           </table>
         </p>
